# sceleto

./: .gitignore  .readthedocs.yaml  README.md  README.rst  __init__.py  genes.py  jhk.py  markers.py  mk_dick.pkl  model.py  network.py  pyproject.toml  species.py
.ipynb_checkpoints/: __init__-checkpoint.py
data/: supplementary_tables.xls
docs/: conf.py  getting_started.rst  index.rst  requirements.txt
docs/api/: annotation.rst  markers.rst  network.rst  utils.rst
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
matrix/: h5ad_files.txt
src/sceleto/: __init__.py  _expr.py  _process.py  annotator.py  dotplot.py  us.py
src/sceleto/annotation/: __init__.py  _pangeapy.py  _transfer.py
src/sceleto/data/: __init__.py  gene_categories.json
src/sceleto/markers/: __init__.py  _base.py  _classic.py  _classic_v1compat.py  _gene_filter.py  _hierarchy.py  _simple.py  _viewer.py
src/sceleto/markers/graph/: __init__.py  _batch.py  _context.py  _features.py  _labels.py  _local.py  _metrics.py  _onestep.py  _threshold.py  _viz.py
src/sceleto/network/: __init__.py  _corr_db.py  _corr_network.py  _network.py
