[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sceleto"
version = "0.1.0"
description = "Single-cell Leiden-based Edge Topology — marker discovery, gene network, and annotation tools"
requires-python = ">=3.9"
authors = [{ name = "Seungmin Cheong" }]
dependencies = [
    "anndata>=0.8",
    "scanpy>=1.9",
    "numpy>=1.21",
    "pandas>=1.4",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
]

[project.optional-dependencies]
pangeapy = ["pangeapy"]
all = ["pangeapy", "adjustText"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sceleto*"]

[tool.setuptools.package-data]
"sceleto.data" = ["*.json"]
