[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sceleto"
version = "0.1.0"
description = "Single-cell Leiden-based Edge Topology — marker discovery, gene network, and annotation tools"
requires-python = ">=3.10"
authors = [{ name = "Seungmin Cheong" }]
dependencies = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
pangeapy = ["pangeapy"]
all = ["pangeapy", "adjustText"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sceleto*"]

[tool.setuptools.package-data]
"sceleto.data" = ["*.json"]
